--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,8 @@
 <title>Coastal Flyrodders</title>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,500italic|Lato:400,300,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{url_for( 'static', filename = 'css/style.css')}}" type="text/css" media="all" />
+<script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
+
 <script type="text/javascript" src="{{url_for( 'static',filename='js/jquery-1.9.1.min.js')}}"></script>
 <script type="text/javascript" src="{{url_for( 'static',filename='js/smoothscroll.js')}}"></script>
 <script type="text/javascript">
@@ -23,7 +25,7 @@
             <ul>
                 <li><a href="#meetings">Meetings</a></li>
                 <li><a href="#events">Events</a></li>
-                <li><a href="http://coastalflyrodders.com/messages/index.php" target="_blank">Message Board</a></li>
+                <li><a href="https://www.facebook.com/Coastal-Flyrodders-110024062416860/" target="_blank">Facebook</a></li>
                 <li><a href="#membership">Membership</a></li>
                 <li class="last"><a href="#links">Links</a></li>
             </ul>
